<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_green_light"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />


   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       >
       <Button
           android:id="@+id/logInButtonId"
           android:layout_margin="10dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/login_name"
           android:textSize="20dp"
           android:textStyle="bold"></Button>


       <Button
           android:id="@+id/logOutButtonId"
           android:layout_margin="10dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/logout_name"
           android:textSize="20dp"
           android:textStyle="bold"></Button>
   </LinearLayout>

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/action_name"
        ></TextView>



</LinearLayout>